--- a/.github/workflows/schedule_sync.yml
+++ b/.github/workflows/schedule_sync.yml
@@ -4,10 +4,12 @@ on:
   schedule:
     # Runs every Wednesday at 12pm UTC
     - cron: '0 12 * * 1,3,5'
+  workflow_dispatch:
 
 jobs:
   run_script:
     runs-on: ubuntu-latest
+    if: github.actor == 'mmakhalaf'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
